Add MongoDB admin module & seed data
Introduce MongoDB-backed admin/catalog functionality and demo data. Adds Spring Data Mongo dependency, a Gradle seedMongo task and a mongosh seed script; removes Google Sheets config and related rate-limit bean. Secures /api/admin/** to require ROLE_ADMIN and updates GlobalExceptions to handle validation and illegal arguments. Adds admin REST controllers, DTOs, services/repo wiring (Mongo documents and repositories under model/mongo and repos/mongo), product model adjustments for free-category/state, new TableStatus enum, and documentation (docs/ADMIN_BACKEND_INTEGRATION.md) describing the integration and endpoints.